--- a/index.html
+++ b/index.html
@@ -1,48 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ accordion</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  FAQs
-
-  What is Frontend Mentor, and how will it help me?
-
-  Frontend Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.
-
-  Is Frontend Mentor free?
-
-  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-  option providing access to a range of projects suitable for all skill levels.
-
-  Can I use Frontend Mentor projects in my portfolio?
-
-  Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-  way to showcase your skills to potential employers!
-
-  How can I get help if I'm stuck on a Frontend Mentor challenge?
-  
-  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members.
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <title>Frontend Mentor | FAQ accordion</title>
+  </head>
+  <body>
+    <div class="background-image"></div>
+    <main class="faq-card">
+      <div class="title">
+        <img
+          class="heading-icon"
+          src="./assets/images/icon-star.svg"
+          alt="Star icon"
+        />
+        <h1 class="heading">FAQs</h1>
+      </div>
+      <ul class="faq-question-list">
+        <li>
+          <div>
+            <span>What is Frontend Mentor, and how will it help me?</span>
+            <button class="btn" data-target="p1">
+              <img src="./assets/images/icon-plus.svg" alt="" />
+            </button>
+          </div>
+          <p id="p1" class="paragraph" id="test">
+            Frontend Mentor offers realistic coding challenges to help
+            developers improve their frontend coding skills with projects in
+            HTML, CSS, and JavaScript. It's suitable for all levels and ideal
+            for portfolio building.
+          </p>
+        </li>
+        <hr />
+        <li>
+          <div>
+            <span>Is Frontend Mentor free?</span>
+            <button class="btn" data-target="p2">
+              <img src="./assets/images/icon-plus.svg" alt="" />
+            </button>
+          </div>
+          <p id="p2" class="paragraph">
+            Yes, Frontend Mentor offers both free and premium coding challenges,
+            with the free option providing access to a range of projects
+            suitable for all skill levels.
+          </p>
+        </li>
+        <hr />
+        <li>
+          <div>
+            <span> Can I use Frontend Mentor projects in my portfolio?</span>
+            <button class="btn" data-target="p3">
+              <img src="./assets/images/icon-plus.svg" alt="" />
+            </button>
+          </div>
+          <p id="p3" class="paragraph">
+            Yes, you can use projects completed on Frontend Mentor in your
+            portfolio. It's an excellent way to showcase your skills to
+            potential employers!
+          </p>
+        </li>
+        <hr />
+        <li>
+          <div>
+            <span>How can I get help if I'm stuck on a challenge?</span>
+            <button class="btn" data-target="p4">
+              <img src="./assets/images/icon-plus.svg" alt="" />
+            </button>
+          </div>
+          <p id="p4" class="paragraph">
+            The best place to get help is inside Frontend Mentor's Discord
+            community. There's a help channel where you can ask questions and
+            seek support from other community members.
+          </p>
+        </li>
+      </ul>
+    </main>
+  </body>
+  <script src="main.js"></script>
 </html>
